[gd_scene load_steps=13 format=3 uid="uid://bictivtnhttj1"]

[ext_resource type="Texture2D" uid="uid://dj2rssddoygvw" path="res://Assets/painting1.png" id="1_fqt82"]
[ext_resource type="Script" path="res://Code/pause_menu.gd" id="1_ywg23"]
[ext_resource type="Texture2D" uid="uid://opr0ghe4trs6" path="res://Assets/Exit1.png" id="2_tku27"]
[ext_resource type="Texture2D" uid="uid://dypqllbkay6xu" path="res://Assets/stay1.png" id="3_isrk2"]
[ext_resource type="Texture2D" uid="uid://hb14gwf4xp4g" path="res://Assets/bottle-ms.png" id="4_7fyhd"]
[ext_resource type="Texture2D" uid="uid://be7uwansyxlaq" path="res://Assets/wife.png" id="5_3h08p"]
[ext_resource type="PackedScene" uid="uid://dyb6t4vffx05" path="res://Scenes/settings_menu.tscn" id="5_n0pig"]
[ext_resource type="Texture2D" uid="uid://djylebf8fkcpu" path="res://Assets/bottle/0001.png" id="6_uu4f6"]
[ext_resource type="AudioStream" uid="uid://h72mjb0tm0xh" path="res://Assets/Sound/angelsee.ogg" id="6_y5xfd"]
[ext_resource type="Texture2D" uid="uid://c3naxh82schaw" path="res://Assets/milk-ms.png" id="9_ggt7n"]
[ext_resource type="Texture2D" uid="uid://dmu4scvc1ynjk" path="res://Assets/MilkAnim/0001.png" id="10_8i5ii"]
[ext_resource type="Texture2D" uid="uid://cxgdib5vb3b17" path="res://Assets/cogwheel.png" id="12_4ka14"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
layer = 2
script = ExtResource("1_ywg23")

[node name="Background" type="TextureRect" parent="."]
z_index = 10
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_fqt82")
metadata/_edit_lock_ = true

[node name="ExitButton" type="TextureButton" parent="."]
z_index = 11
anchors_preset = -1
anchor_left = 0.312
anchor_top = 0.817
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -7.68001
offset_top = -0.160004
offset_right = 32.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("2_tku27")
ignore_texture_size = true
stretch_mode = 0

[node name="BackButton" type="TextureButton" parent="."]
z_index = 11
offset_left = 8.0
offset_top = 8.0
offset_right = 192.0
offset_bottom = 104.0
texture_normal = ExtResource("3_isrk2")
ignore_texture_size = true
stretch_mode = 0

[node name="wife" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="wife"]
z_index = 11
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 89.0
offset_top = -63.0
offset_right = 519.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("5_3h08p")
expand_mode = 1
stretch_mode = 4
metadata/_edit_lock_ = true

[node name="Wife" type="TextureButton" parent="wife"]
z_index = 11
layout_mode = 0
offset_left = 520.0
offset_top = 13.0
offset_right = 628.0
offset_bottom = 398.0
ignore_texture_size = true
stretch_mode = 4

[node name="Godhelpme" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_y5xfd")
volume_db = -5.0

[node name="Collectibles" type="MarginContainer" parent="."]
z_index = 11
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -300.0
offset_bottom = 60.0
grow_horizontal = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Collectibles"]
layout_mode = 2

[node name="BottleActivar" type="TextureButton" parent="Collectibles/HBoxContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
tooltip_text = "Makes everything fun!"
toggle_mode = true
texture_normal = ExtResource("4_7fyhd")
texture_pressed = ExtResource("6_uu4f6")

[node name="MilkActivar" type="TextureButton" parent="Collectibles/HBoxContainer"]
layout_mode = 2
tooltip_text = "Possesses mind healing properties, works like in the block game"
toggle_mode = true
texture_normal = ExtResource("9_ggt7n")
texture_pressed = ExtResource("10_8i5ii")

[node name="TextureButton" type="TextureButton" parent="."]
z_index = 11
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
grow_vertical = 0
texture_normal = ExtResource("12_4ka14")

[node name="SettingsMenu" parent="." instance=ExtResource("5_n0pig")]
visible = false
z_index = 20

[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="wife/Wife" to="." method="_on_wife_pressed"]
[connection signal="pressed" from="Collectibles/HBoxContainer/BottleActivar" to="." method="_on_bottle_activar_pressed"]
[connection signal="pressed" from="Collectibles/HBoxContainer/MilkActivar" to="." method="_on_milk_activar_pressed"]
[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
